# ICML26_Supplemental

./: .Rhistory  .gitignore  FMNISTConvolutionDemo.py  MNIST-combine.py  MNIST-superpixels.py  MNISTConvolutionDemo.py  MNIST_pixel_encoding.py  Makefile  MultivalueXOR.py  NoisyXORDemo.py  README.md  XOR_MNIST.py  YOU_ARE_HACKED  compar_pipeline_demo.py  create_superpixels.py  data  mnist_superpixel_graph_visualize.py  model_performance_analysis.ipynb  pixi.toml  pyproject.toml  run_bm.sh  simple_example.py  template.py  test_hyperliterals.py  test_mmnist.py
.devcontainer/: Dockerfile  build  devcontainer.json  devcontainer.json.template  docker-compose.yml
ActionCoreference/: binarize_data.ipynb  model_performance_analysis.ipynb  template.py  test_action_coref.py  track_action_coreference-Copy1.py
ActionCoreference/results/: actioncoref_3utt_complete.csv  actioncoref_5utt_Tue_18_Nov_2025_07_51_03_AM.csv  (+2 more)
GraphTM-DNA-Sequence-Classification/: README.md  graphtm.py
MV-NoisyXOR/: test.csv  train.py
Mayur/: README.md  pixel-encoding.py  pyproject.toml
Paul/: pharm_GraphTM.py  rough-work.ipynb
Pharmacophore/: pharm_GraphTM.py
Sentiment_polarity/: GNN_IMDB.py  GNN_mpqa&Yelp.py  README.md  VanillaTM_mpqa&Yelp.py  Vanilla_tm_imdb.py  gtm_MPQA.py  gtm_imdb.py  gtm_yelp.py
TopNRecommendation/: data_loader_movielens.py  graph_tm_movielens.py  movielens_labels.py
bad.devcontainer/: docker-compose.yml  make_env.sh
recommendation_system/: README.md  requirements.txt
test/: subset_test_genome.py  subset_test_mnist.py  subset_test_xor.py  test_bm_xor.py
(+100 files in other folders)
